--- a/styles/container/components-css/filter.module.css
+++ b/styles/container/components-css/filter.module.css
@@ -1,9 +1,8 @@
 .filter_body {
-    width: 25%;
+    width: 15rem;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0rem;
-    z-index: -1;
     display: grid;
     justify-items: flex-end;
     background: var(--red-tomato);
@@ -14,16 +13,17 @@
 
 .filter_main {
     height: 100%;
-    width: 20vw;
     background: var(--light-grey);
-    padding: 4.5rem 0.5rem 0.5rem 0.5rem;
+    padding: 5rem 0.5rem 0.5rem 0.5rem;
 }
-
+#filter_off{
+    left: -100vw !important;
+}
 .filter_container {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
     overflow-y: scroll;
     height: 21rem
 }
@@ -179,20 +179,23 @@
         width: 100%;
         background: var(--light-grey);
         justify-items: start;
+        padding: var(--margin);
+        overflow-y: scroll;
     }
     .filter_main{
         width: 100%;
-        padding: 5rem 6rem 1rem 1rem;
-        overflow-y: scroll;
+        width: 15rem;
+        padding: 5rem 0.5rem 0.5rem 0.5rem;
     }
     .filter_container{
         height: auto;
+        gap: 1.5rem;
     }
     .a_container{
         display: flex;
     }
     .changes_btn{
-        margin-top: 1rem;
+        margin-top: 2rem;
     }
 
 }
@@ -202,19 +205,22 @@
         width: 100%;
         background: var(--light-grey);
         justify-items: start;
+        padding: var(--margin);
+        overflow-y: scroll;
     }
     .filter_main{
         width: 100%;
-        padding: 5rem 6rem 1rem 1rem;
-        overflow-y: scroll;
+        width: 15rem;
+        padding: 5rem 0.5rem 0.5rem 0.5rem;
     }
     .filter_container{
         height: auto;
+        gap: 1.5rem;
     }
     .a_container{
         display: flex;
     }
     .changes_btn{
-        margin-top: 1rem;
+        margin-top: 2rem;
     }
 }
