--- a/styles/container/home-page-css/home.module.css
+++ b/styles/container/home-page-css/home.module.css
@@ -1,17 +1,39 @@
 .home_main{
+    padding: var(--margin);
     width: 100%;
+    padding-top: 6rem;
     display: flex;
-    height: 200vh;
+    height: auto;
 }
 .porposals_section{
     width: 75%;
     height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    row-gap: 1rem;
 }
 .advertisement_section{
     width: 25%;
-    height: 100%;
+    height: auto;
+    border-left: 0.2rem solid var(--grey);
 }
 .page_moving{
     width: 100%;
     height: 5vh;
+}
+
+@media screen and (max-width: 900px) {
+    .advertisement_section{
+        display: none;
+    }
+    .porposals_section{
+        width: 100%;
+        row-gap: 1.5rem;
+    }
+}
+@media screen and (max-width: 900px) {
+    .porposals_section{
+        row-gap: 2rem;
+    }
 }
