--- a/styles/container/home-page-css/home.module.css
+++ b/styles/container/home-page-css/home.module.css
@@ -13,6 +13,7 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     row-gap: 1rem;
+    column-gap: 1rem;
 }
 
 .advertisement_section {
@@ -23,7 +24,7 @@
 
 .page_moving {
     width: 100%;
-    height: 5vh;
+    height: auto;
 }
 
 @media screen and (max-width: 900px) {
@@ -34,11 +35,23 @@
     .porposals_section {
         width: 100%;
         row-gap: 1.5rem;
+        justify-content: space-around;
     }
 }
 
 @media screen and (max-width: 900px) {
     .porposals_section {
         row-gap: 2rem;
+    }
+}
+@media screen and (min-height: 1350px) {
+    .advertisement_section {
+        display: none;
+    }
+
+    .porposals_section {
+        width: 100%;
+        row-gap: 1.5rem;
+        justify-content: space-around;
     }
 }
