--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,11 +15,11 @@
     --black-blue: #455A5C;
     --white-blue: #EAF4F7;
     --black: #000000;
+    --green: #65FF4C;
     /* margin root */
     --margin: 0vw 8vw;
 }
-
-* {
+*{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -52,5 +52,10 @@ body {
 @media screen and (max-width: 500px) {
     :root {
         --margin: 0vw 2vw;
+    }
+}
+@media screen and (min-height: 1350px) {
+    :root {
+        --margin: 0vw 4vw;
     }
 }
