--- a/styles/container/profile-page-css/components/basic_profile.module.css
+++ b/styles/container/profile-page-css/components/basic_profile.module.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     gap: 1.5rem;
     border-radius: 0.5rem;
+    box-shadow: 0.3rem 0.3rem 0.5rem 0rem rgb(0 0 0 / 15%);
 }
 .basic_header{
     width: 100%;
@@ -46,8 +47,8 @@
     align-items: center;
 }
 .basic_image figure{
-    width: 8rem;
-    height: 8rem;
+    width: 9rem;
+    height: 9rem;
     background: url(https://images.unsplash.com/photo-1628157588553-5eeea00af15c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80);
     background-position: center center;
     box-shadow: inset 0rem 0rem 0.4rem 0rem hsl(0deg 0% 0% / 50%);
@@ -164,42 +165,43 @@
 }
 @media screen and (min-height: 1350px) {
     .basic_profile_main{
-    display: grid;
-    grid-template-columns: min-content auto;
-    }
-    .basic_header{
-        order: 2;
-        width: 100%;
-        flex-direction: column;
-        align-items: flex-end;
-        justify-content: space-evenly;
-    }
-    .basic_image{
-        order: 1;
-        width: min-content;
-        justify-content: flex-start;
-    }
-    .basic_info{
-        order: 4;
-        grid-column: 1/3;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-    .basic_button{
-        display: none;
-    }
-    .basic_header button{
-        order: 1;
-        width: 100%;
-    }
-    .basic_info span{
-        width: 49%;
-    }
-    .basic_header svg{
-        display: none;
-    }
-    .basic_image figure{
-        width: 7rem;
-        height: 7rem;
-    }
+        display: grid;
+        grid-template-columns: min-content auto;
+        }
+        .basic_header{
+            order: 2;
+            width: 100%;
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: space-evenly;
+        }
+        .basic_image{
+            order: 1;
+            width: min-content;
+            justify-content: flex-start;
+        }
+        .basic_info{
+            order: 4;
+            grid-column: 1/3;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+        .basic_button{
+            display: none;
+        }
+        .basic_header button{
+            order: 1;
+            width: 100%;
+            display: initial !important;
+        }
+        .basic_info span{
+            width: 49%;
+        }
+        .basic_header svg{
+            display: none;
+        }
+        .basic_image figure{
+            width: 7rem;
+            height: 7rem;
+        }
 }
