--- a/styles/container/profile-page-css/profile.module.css
+++ b/styles/container/profile-page-css/profile.module.css
@@ -6,14 +6,28 @@
     padding: var(--margin);
     padding-top: 5rem;
     padding-bottom: 5rem;
+    gap: 1rem;
 }
 .basic_profile{
     width: 25%;
     height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 .detailed_profile{
     flex: 50%;
     height: 100%;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+.parent_profile{
+    margin: 0% 5%;
+    width: 90%;
+    display: flex;
+    gap: 1rem;
 }
 .adds_section{
     width: 25%;
@@ -35,6 +49,15 @@
     .basic_profile{
         width: 100%;
     }
+    .parent_profile{
+        margin: 0%;
+        width: 100%;
+    }
+}
+@media screen and (max-width: 900px) {
+    .parent_profile{
+        flex-direction: column;
+    }
 }
 @media screen and (min-height: 1350px) {
     .profile{
@@ -48,5 +71,10 @@
     }
     .basic_profile{
         width: 100%;
+    }
+    .parent_profile{
+        margin: 0%;
+        width: 100%;
+        flex-direction: column;
     }
 }
