--- a/styles/container/profile-page-css/components/profile_media.module.css
+++ b/styles/container/profile-page-css/components/profile_media.module.css
@@ -27,7 +27,16 @@
     border-radius: 0.3rem;
     box-shadow: inset 0rem 0rem 0.4rem 0rem hsl(0deg 0% 0% / 50%);
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+.edits_image{
+    height: 100% !important;
+    justify-content: flex-end !important;
+    align-items: flex-start !important;
+    padding: 0.5rem;
+    gap: 0.5rem;
 }
 .images div{
     width: 100%;
@@ -37,11 +46,11 @@
     height: 2rem;
 }
 .images div span{
-    width: 0.7rem;
-    height: 0.7rem;
-    border-radius: 0.7rem;
+    width: 0.6rem;
+    height: 0.6rem;
+    border-radius: 0.6rem;
     background: var(--light-grey);
-    margin: 0.2rem;
+    margin: 0.15rem;
     cursor: pointer;
 }
 .media{
@@ -76,6 +85,43 @@
     font-weight: 500;
     color: var(--black-blue);
 }
+.media input{
+    outline: none;
+    border: none;
+    border-bottom: 0.2rem solid var(--light-blue);
+    background: none;
+    flex: 1;
+    text-align: left;
+    font-family: var(--poppins);
+    color: var(--black-blue);
+    font-size: 0.7rem;
+    font-weight: 400;
+    margin: 0rem 1rem;
+    border-radius: 0rem 0rem 0.2rem 0rem;
+    width: inherit;
+}
+.edits_image svg{
+    font-size: 1.2rem;
+    color: var(--white);
+    cursor: pointer;
+}
+.media svg{
+    font-size: 1.2rem;
+}
+.media svg:first-of-type{
+    color: var(--light-blue);
+}
+.media svg:last-of-type{
+    color: var(--red-tomato);
+    display: none;
+}
+
+/* effects */
+.edits_image svg:hover{
+    color: var(--red-tomato);
+}
+
+/* media query */
 @media screen and (max-width: 900px){
     .profile_media{
         width: 100%;
