--- a/styles/container/landing-page-css/components/images.module.css
+++ b/styles/container/landing-page-css/components/images.module.css
@@ -10,7 +10,7 @@
 
 .Images figure {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
