--- a/styles/container/login-page-css/login.module.css
+++ b/styles/container/login-page-css/login.module.css
@@ -39,6 +39,7 @@
 .login_container section figure svg{
     font-size: 1rem;
     color: var(--dark-blue);
+    cursor: pointer;
 }
 .section1 figure{
     justify-content: left;
@@ -48,7 +49,6 @@
 }
 .section1{
     justify-content: flex-end;
-    background: blueviolet;
     display: flex;
     flex-direction: column;
     height: 50rem;
