--- a/styles/container/inbox-page-css/components/friends.module.css
+++ b/styles/container/inbox-page-css/components/friends.module.css
@@ -1,11 +1,17 @@
-.main{
-    width: 30%;
+.main {
+    width: 15rem;
     height: 100%;
     background: var(--light-grey);
     border-radius: 1rem;
     overflow-y: hidden;
+    box-shadow: 0.3rem 0.3rem 0.5rem 0rem rgb(0 0 0 / 15%);
 }
-.header{
+
+#slider_on {
+    width: 15rem;
+}
+
+.header {
     box-shadow: 0.2rem 0rem 0.13rem 0.3rem rgb(0 0 0 / 12%);
     padding: 0.8rem;
     display: flex;
@@ -13,7 +19,8 @@
     justify-content: space-between;
     gap: 1rem;
 }
-.header input{
+
+.header input {
     width: 100%;
     font-size: 0.8rem;
     outline: none;
@@ -26,12 +33,14 @@
     font-weight: 400;
     border: none;
 }
-.header svg{
+
+.header svg {
     font-size: 1.2rem;
     color: var(--black-blue);
     cursor: pointer;
 }
-.header span{
+
+.header span {
     border: 0.1rem solid var(--black-blue);
     border-radius: 0.4rem;
     padding: 0.2rem 0.5rem;
@@ -40,13 +49,16 @@
     gap: 0.5rem;
     background: var(--white);
 }
-.header span svg{
+
+.header span svg {
     font-size: 1rem;
 }
-.friends_section{
+
+.friends_section {
     height: 100%;
 }
-.friends{
+
+.friends {
     width: 100%;
     height: 100%;
     padding: 1rem;
@@ -58,10 +70,12 @@
     align-items: center;
     gap: 0.5rem;
 }
-.friends::-webkit-scrollbar{
+
+.friends::-webkit-scrollbar {
     display: none;
 }
-.friend{
+
+.friend {
     width: 100%;
     background: var(--white);
     display: flex;
@@ -72,7 +86,8 @@
     border: 0.1rem solid var(--light-blue);
     cursor: pointer;
 }
-.friend figure{
+
+.friend figure {
     background: url(https://images.unsplash.com/photo-1628157588553-5eeea00af15c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80);
     width: 2.3rem;
     background-position: center center;
@@ -81,27 +96,32 @@
     height: 2.3rem;
     border-radius: 3rem;
 }
-.friend div{
+
+.friend div {
     flex: 1;
 }
-.friend div span{
+
+.friend div span {
     display: flex;
     gap: 5%;
     align-items: center;
 }
-.friend div span h5{
+
+.friend div span h5 {
     font-size: 0.8rem;
     font-weight: 500;
     font-family: var(--Roboto);
     color: var(--black-blue);
 }
-.friend div span p{
+
+.friend div span p {
     font-size: 0.6rem;
     font-family: var(--Roboto);
     color: var(--light-blue);
     letter-spacing: 0.01rem;
 }
-.friend div aside{
+
+.friend div aside {
     display: flex;
     font-size: 0.6rem;
     line-height: 1rem;
@@ -112,29 +132,36 @@
     gap: 1%;
     color: var(--black-blue);
 }
-.friend div aside p{
+
+.friend div aside p {
     font-weight: 500;
 }
-.friends h4{
+
+.friends h4 {
     font-size: 0.9rem;
     color: var(--black-blue);
     font-family: var(--poppins);
     font-weight: 600;
     width: 100%;
 }
-.friend:first-child{
+
+.friend:first-child {
     background: var(--light-blue);
 }
-.friend:first-child div span h5{
+
+.friend:first-child div span h5 {
     color: var(--white);
 }
-.friend:first-child div span p{
+
+.friend:first-child div span p {
     color: var(--green);
 }
-.friend:first-child div aside{
+
+.friend:first-child div aside {
     color: var(--white);
 }
-.inbox_filter{
+
+.inbox_filter {
     height: 100%;
     position: relative;
     background: var(--light-grey);
@@ -147,39 +174,76 @@
     gap: 0.5rem;
     transition-duration: 0.5s;
 }
-.inbox_filter h5{
+
+.inbox_filter h5 {
     font-size: 0.9rem;
     color: var(--black-blue);
     font-family: var(--poppins);
     font-weight: 600;
 }
-.inbox_filter span{
+
+.inbox_filter span {
     padding-left: 0.5rem;
     display: flex;
     flex-direction: column;
-    gap: 0.2rem;
+    gap: 0.5rem;
 }
-.inbox_filter span p{
+
+.inbox_filter span p {
     font-size: 0.8rem;
     font-family: var(--poppins);
     font-weight: 500;
     color: var(--grey);
     cursor: pointer;
     transition-duration: 0.2s;
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
 }
-.header label input{
+
+.inbox_filter span p svg {
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.header label input {
     display: none;
 }
 
 
 /* effects */
-.header span svg:hover{
+.header span svg:hover {
     color: var(--red-tomato);
 }
-.inbox_filter span p:hover{
+
+.inbox_filter span p:hover {
     color: var(--red-tomato);
     padding-left: 0.5rem;
+    gap: 0.5rem;
+    font-weight: 600;
 }
-.filter_input:checked+.filter_icon_inbox{
+
+.filter_input:checked+.filter_icon_inbox {
     color: var(--red-tomato);
+}
+
+/* media query */
+@media screen and (max-width: 900px) {
+    .main {
+        width: 100%;
+    }
+
+    #slider_on {
+        width: 0%;
+    }
+}
+
+@media screen and (min-height: 1350px) {
+    .main {
+        width: 100%;
+    }
+
+    #slider_on {
+        width: 0%;
+    }
 }
