--- a/styles/container/components-css/footer.module.css
+++ b/styles/container/components-css/footer.module.css
@@ -23,7 +23,7 @@
 .logo_searchs figure{
     height: 5rem;
     width: 100%;
-    background-image: url(../../../public/image\ 5.svg);
+    background-image: url(../../../public/new\ logo\ 20.svg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center left;
