--- a/styles/container/inbox-page-css/components/chats.module.css
+++ b/styles/container/inbox-page-css/components/chats.module.css
@@ -180,23 +180,44 @@
 
 /* media query */
 @media screen and (max-width: 900px) {
-    .main{
+    .main {
         width: 100%;
     }
-    .main_header svg{
+
+    .main_header svg {
         display: initial;
     }
 }
+
 @media screen and (max-width: 600px) {
-    .main_header div{
+    .main_header div {
+        display: none;
+    }
+
+    .chats {
+        height: calc(100% - 5.5rem);
+    }
+    .inputs {
+        padding: 0.7rem 0.5rem;
+        gap: 0.5rem;
+    }
+    .inputs svg{
+        font-size: 1rem;
+    }
+    .inputs input{
+        font-size: 0.8rem;
+    }
+    .inputs svg:first-child{
         display: none;
     }
 }
+
 @media screen and (min-height: 1350px) {
-    .main{
+    .main {
         width: 100%;
     }
-    .main_header svg{
+
+    .main_header svg {
         display: initial;
     }
 }
