--- a/styles/container/landing-page-css/components/navbar.module.css
+++ b/styles/container/landing-page-css/components/navbar.module.css
@@ -7,7 +7,7 @@
 .navbar figure {
     height: 4rem;
     width: 7rem;
-    background-image: url(../../../../public/image\ 5.svg);
+    background-image: url(../../../../public/new\ logo\ 20.svg);
     background-size: contain;
     background-position: center left;
     background-repeat: no-repeat;
