--- a/styles/container/landing-page-css/landing.module.css
+++ b/styles/container/landing-page-css/landing.module.css
@@ -1,6 +1,6 @@
 .landing_page{
     width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     background: rgb(247, 246, 255);
     background: linear-gradient(90deg, rgba(247, 246, 255, 1) 0%, rgba(255, 255, 255, 1) 25%, rgba(0, 212, 255, 0) 40%);
 }
