--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
     /* fonts root */
     --Roboto: 'Roboto', sans-serif;
     --poppins: 'Poppins', sans-serif;
-    --inter: 'Inter', sans-serif;
+    --intera: 'Inter', sans-serif;
     /* color root */
     --dark-blue: #117182;
     --light-blue: #42AFC2;
