--- a/styles/container/landing-page-css/components/images.module.css
+++ b/styles/container/landing-page-css/components/images.module.css
@@ -1,6 +1,6 @@
 .Images {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: grid;
     overflow-x: hidden;
     grid-template-columns: 100vw 100vw 100vw 100vw 100vw;
