--- a/styles/container/login-page-css/login.module.css
+++ b/styles/container/login-page-css/login.module.css
@@ -1,6 +1,6 @@
 .login_page{
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
