--- a/styles/container/inbox-page-css/components/chats.module.css
+++ b/styles/container/inbox-page-css/components/chats.module.css
@@ -33,9 +33,9 @@
 .main_header div figure {
     background: url(https://images.unsplash.com/photo-1628157588553-5eeea00af15c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80);
     width: 2.3rem;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
     height: 2.3rem;
     border-radius: 3rem;
 }
