--- a/styles/container/inbox-page-css/components/friends.module.css
+++ b/styles/container/inbox-page-css/components/friends.module.css
@@ -88,11 +88,11 @@
 }
 
 .friend figure {
-    background: url(https://images.unsplash.com/photo-1628157588553-5eeea00af15c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80);
+    /* background: url(https://images.unsplash.com/photo-1628157588553-5eeea00af15c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80); */
     width: 2.3rem;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
     height: 2.3rem;
     border-radius: 3rem;
 }
@@ -113,30 +113,40 @@
     font-family: var(--Roboto);
     color: var(--black-blue);
 }
-
+.friend div span h5::first-letter{
+    text-transform: uppercase;
+} 
 .friend div span p {
     font-size: 0.6rem;
     font-family: var(--Roboto);
     color: var(--light-blue);
     letter-spacing: 0.01rem;
 }
-
+.friend div span p::first-letter{
+    text-transform: uppercase;
+}
 .friend div aside {
     display: flex;
     font-size: 0.6rem;
     line-height: 1rem;
     width: 100%;
     height: 1rem;
-    overflow: hidden;
     font-family: var(--poppins);
+    overflow: hidden;
+    text-overflow: inherit;
     gap: 1%;
     color: var(--black-blue);
 }
-
-.friend div aside p {
+.friend div aside p:first-child {
     font-weight: 500;
+    display: none;
 }
-
+.friend div aside p:last-child{
+    display: block;
+}
+.friend div aside p:last-child::first-letter{
+    text-transform: capitalize;
+}
 .friends h4 {
     font-size: 0.9rem;
     color: var(--black-blue);
