--- a/styles/container/support-page-css/components/Profiles_FandQ.module.css
+++ b/styles/container/support-page-css/components/Profiles_FandQ.module.css
@@ -58,12 +58,12 @@
 .hading h5{
     color: var(--black-blue);
     font-size: 0.8rem;
-    font-family: var(--intera);
+    font-family: var(--inter);
     font-weight: 500;
     text-align: center;
 }
 .hading a{
-    font-family: var(--intera);
+    font-family: var(--inter);
     font-size: 0.8rem;
     font-weight: 400;
     cursor: pointer;
