--- a/styles/container/support-page-css/components/report.module.css
+++ b/styles/container/support-page-css/components/report.module.css
@@ -75,6 +75,9 @@
     cursor: pointer;
     width: 100%;
 }
+.FandQ span h5::first-letter{
+    text-transform: uppercase;
+}
 .FandQ span svg{
     font-size: 1rem;
     color: var(--red-tomato);
@@ -98,6 +101,9 @@
     font-weight: 500;
     font-family: var(--poppins);
     letter-spacing: 0.01rem;
+}
+.FandQ label aside::first-letter{
+    text-transform: uppercase;
 }
 .FandQ label input{
     width: 0.8rem;
