--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
     /* fonts root */
     --Roboto: 'Roboto', sans-serif;
     --poppins: 'Poppins', sans-serif;
-    --intera: 'Inter', sans-serif;
+    --inter: 'Inter', sans-serif;
     /* color root */
     --dark-blue: #117182;
     --light-blue: #42AFC2;
@@ -24,7 +24,6 @@
     margin: 0px;
     box-sizing: border-box;
 }
-
 html,
 body {
     height: 100%;
