--- a/styles/container/inbox-page-css/components/friends.module.css
+++ b/styles/container/inbox-page-css/components/friends.module.css
@@ -60,7 +60,7 @@
 
 .friends {
     width: 100%;
-    height: 100%;
+    height: 85%;
     padding: 1rem;
     padding-top: 0rem;
     margin-top: 1rem;
@@ -147,12 +147,16 @@
 .friend div aside p:last-child::first-letter{
     text-transform: capitalize;
 }
+.friend div aside p:first-child[id= 'faisal qurashi']{
+    display: initial;
+}
 .friends h4 {
     font-size: 0.9rem;
     color: var(--black-blue);
     font-family: var(--poppins);
     font-weight: 600;
     width: 100%;
+    text-transform: capitalize;
 }
 
 .friend:first-child {
